# aca-bot

./: .replit  README.md  Readme.md  all_massages.py  database_handling.py  discord_bot.py  new_Engineering_-_University_of_Moratuwa_-_Galle_District.csv  pyproject.toml  requirements.txt
acabot/: all_masseges.py  db.sqlite3  discord_bot.py  manage.py  newStudents.csv  requirements.txt  sample.csv  test.py
acabot/Aca_sessions/: admin.py  apps.py  models.py
acabot/Users/: admin.py  models.py
acabot/Users/migrations/: 0001_initial.py  0002_students_delete_sample.py  0003_alter_students_island_rank_alter_students_school_and_more.py  0004_students_registered.py
acabot/acabot/: asgi.py  settings.py  urls.py  wsgi.py
acabot/attendance/: admin.py  models.py
acabot/homework/: models.py
