[tool.poetry]
name = "repl_nix_aca-bot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.1.0"
replit = "^3.2.5"
PyNaCl = "^1.5.0"
pytz = "^2022.7.1"
Django = "^4.1.7"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
